<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/layout_top_padding"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/dividerColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/select_padding"
        android:background="@color/text_background">
        <TextView
            android:text="@string/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_text"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password_format"
            style="@style/normal_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/content_padding" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/dividerColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/select_padding"
        android:background="@color/colorWhite">
        <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_text"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:hint="@string/reset_password"
            style="@style/normal_hint_text"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/dividerColor"/>

    <Button
        android:id="@+id/ok"
        style="@style/normal_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_top"
        android:layout_marginLeft="@dimen/btn_left"
        android:layout_marginRight="@dimen/btn_right"
        android:text="@string/confirm"/>

</LinearLayout>