<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/dividerColor"
        android:layout_marginTop="@dimen/mine_layout_top"/>

    <LinearLayout
        android:id="@+id/college_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/bind_padding"
        style="@style/item">
        <TextView
            android:text="@string/college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/bind_paddingleft"
            android:paddingRight="@dimen/bind_paddingright"
            style="@style/normal_text"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/college"
            android:hint="@string/select_bind_college"
            style="@style/normal_hint_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:padding="@dimen/bind_padding2" />
        <ImageView
            android:id="@+id/profession"
            android:layout_width="@dimen/bind_img_size"
            android:layout_height="@dimen/bind_img_size"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/dividerColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/bind_padding"
        android:background="@color/colorWhite">
        <TextView
            android:text="@string/number_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_text"
            android:paddingLeft="@dimen/bind_paddingleft"
            android:paddingRight="@dimen/bind_paddingright"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:hint="@string/input_account"
            style="@style/normal_hint_text"
            android:layout_height="wrap_content"
            android:padding="@dimen/bind_padding2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/dividerColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/bind_padding"
        android:background="@color/colorWhite">
        <TextView
            android:text="@string/bind_password_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normal_text"
            android:paddingLeft="@dimen/bind_paddingleft"
            android:paddingRight="@dimen/bind_paddingright"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            style="@style/normal_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/bind_padding2" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/dividerColor"/>


    <Button
        android:id="@+id/bind"
        style="@style/normal_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_top"
        android:layout_marginLeft="@dimen/btn_left"
        android:layout_marginRight="@dimen/btn_right"
        android:text="@string/bind"/>

</LinearLayout>