<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbars="none"
    >
    <LinearLayout
        android:paddingTop="@dimen/layout_top_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_divide"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/passwd_reset_padding"
            android:background="@color/colorWhite">
            <TextView
                android:text="@string/now_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/now_password"
                android:hint="@string/enter_now_passwd"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/subhead_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="@dimen/passwd_reset_content_padding" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/passwd_reset_padding"
            android:background="@color/colorWhite">
            <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:hint="@string/password_format"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/subhead_device"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="@dimen/passwd_reset_content_padding" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/height"
            android:background="@color/colorWhite">
            <TextView
                android:text="@string/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/new_password2"
                android:hint="@string/repeat_new_passwd"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/subhead_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="@dimen/passwd_reset_content_padding" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/dividerColor"/>
        <Button
            android:id="@+id/ok"
            style="@style/long_button_style.register_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_top"
            android:layout_marginLeft="@dimen/btn_left"
            android:layout_marginRight="@dimen/btn_right"
            android:layout_marginBottom="@dimen/btn_bottom"
            android:text="@string/confirm"/>

    </LinearLayout>
</ScrollView>